<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    tools:context="android.wallet.com.wallet.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:src="@drawable/font"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/imageView" />

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="35dp"
            android:textStyle="bold|italic"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView" />

        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:hint="@string/password_hint"
            android:textAlignment="center"
            android:inputType="textPassword" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/unlockWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unlock_wallet"
            android:background="@color/colorAccent"
            android:textColor="#ffffff"
            android:textSize="20dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
