<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/whiteColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.wallet.com.wallet.WalletProfile.SendTransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:layout_margin="10dp"
            android:id="@+id/toAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address_text"
            android:textAlignment="center"
            style="@style/Base.TextAppearance.AppCompat.Large"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:textColor="@color/colorAccent"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eth"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/ethEditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView"
                android:layout_marginStart="10dp" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_text"
                android:background="@color/colorAccent"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/whiteColor"
                android:layout_marginRight="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/tx_hash"
        android:maxLines="1"
        android:textSize="20dp"
        android:textAlignment="center"
        />

        <TextView
            android:id="@+id/transactionHashTextView"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0x00"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/subDetailsTextView"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
